--- a/app/src/main/res/layout/fragment_delivery_options.xml
+++ b/app/src/main/res/layout/fragment_delivery_options.xml
@@ -1,117 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/powerBuyWhite">
+
+    <TextView
+        android:id="@+id/option_title"
+        style="@style/textHead"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="เลือกการจัดส่ง"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/delivery_options_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/option_title" />
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/express"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:cardBackgroundColor="@color/lightgray"-->
-        <!--android:layout_marginTop="32dp"-->
-        <!--android:layout_marginStart="32dp"-->
-        <!--android:layout_marginBottom="16dp"-->
-        <!--android:layout_marginEnd="16dp"-->
-        <!--app:cardCornerRadius="16dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/standard"-->
-        <!--app:layout_constraintBottom_toTopOf="@id/store">-->
-
-        <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textColor="@color/colorPrimary"-->
-            <!--style="@style/textSubCheck"-->
-            <!--android:text="EXPRESS"-->
-            <!--android:textSize="40sp"/>-->
-
-    <!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/standard"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:cardBackgroundColor="@color/lightgray"-->
-        <!--android:layout_marginTop="32dp"-->
-        <!--android:layout_marginStart="16dp"-->
-        <!--android:layout_marginBottom="16dp"-->
-        <!--android:layout_marginEnd="32dp"-->
-        <!--app:cardCornerRadius="16dp"-->
-        <!--app:layout_constraintStart_toEndOf="@id/express"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintBottom_toTopOf="@id/home">-->
-
-        <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textColor="@color/colorPrimary"-->
-            <!--style="@style/textSubCheck"-->
-            <!--android:text="STANDARD"-->
-            <!--android:textSize="40sp"/>-->
-    <!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/store"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:cardBackgroundColor="@color/lightgray"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:layout_marginStart="32dp"-->
-        <!--android:layout_marginBottom="32dp"-->
-        <!--android:layout_marginEnd="16dp"-->
-        <!--app:cardCornerRadius="16dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@id/express"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/home">-->
-
-        <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textColor="@color/colorPrimary"-->
-            <!--style="@style/textSubCheck"-->
-            <!--android:text="STORE"-->
-            <!--android:textSize="40sp"/>-->
-    <!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/home"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:cardBackgroundColor="@color/lightgray"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:layout_marginStart="16dp"-->
-        <!--android:layout_marginBottom="32dp"-->
-        <!--android:layout_marginEnd="32dp"-->
-        <!--app:cardCornerRadius="16dp"-->
-        <!--app:layout_constraintStart_toEndOf="@id/store"-->
-        <!--app:layout_constraintTop_toBottomOf="@id/standard"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent">-->
-
-        <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textColor="@color/colorPrimary"-->
-            <!--style="@style/textSubCheck"-->
-            <!--android:text="HOME"-->
-            <!--android:textSize="40sp"/>-->
-    <!--</android.support.v7.widget.CardView>-->
 </android.support.constraint.ConstraintLayout>
