--- a/app/src/main/res/layout/fragment_delivery_stores.xml
+++ b/app/src/main/res/layout/fragment_delivery_stores.xml
@@ -20,7 +20,7 @@
         app:typeFaceAsset="RobotoLight.ttf" />
 
     <FrameLayout
-        android:id="@+id/stores_fragment"
+        android:id="@+id/content_stores"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
@@ -37,7 +37,7 @@
         app:layout_constraintGuide_percent="0.4" />
 
     <FrameLayout
-        android:id="@+id/store_detail_fragment"
+        android:id="@+id/content_store_detail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
