--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -73,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="8dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -131,7 +132,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     app:header="@string/house_on"
-                    app:required="false" />
+                    app:required="true" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
                     android:id="@+id/place_or_building_payment"
@@ -148,6 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="8dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
@@ -166,7 +168,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
                     app:header="@string/street"
-                    app:required="false" />
+                    app:required="true" />
 
             </LinearLayout>
 
@@ -174,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="8dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -201,6 +204,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="8dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -228,6 +232,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="8dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
