--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -5,8 +5,8 @@
     android:id="@+id/activity_cart"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ShoppingCartActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".activity.ShoppingCartActivity">
 
     <include
         android:id="@+id/actionbar"
@@ -29,14 +29,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:ellipsize="end"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:ellipsize="end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:typeFaceAsset="RobotoLight.ttf"
             tools:text="@string/format_header_cart_items" />
+
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/cartDescriptionTextView"
+            android:visibility="gone"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            tools:text="@string/format_shopping_cart_ispu"
+            app:layout_constraintTop_toBottomOf="@+id/txt_header_shopping_cart" />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_shopping_cart"
@@ -51,7 +63,7 @@
             app:layout_constraintBottom_toTopOf="@id/layout_total_shopping_cart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_header_shopping_cart" />
+            app:layout_constraintTop_toBottomOf="@+id/cartDescriptionTextView" />
 
         <LinearLayout
             android:id="@+id/layout_total_shopping_cart"
