--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -152,6 +152,27 @@
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
     </style>
 
+    <style name="CompareButton" parent="Widget.AppCompat.ActionButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="elevation">4dp</item>
+        <item name="android:paddingTop">@dimen/margin_padding_xsmall</item>
+        <item name="android:paddingBottom">@dimen/margin_padding_xsmall</item>
+        <item name="android:paddingStart">@dimen/margin_padding_small</item>
+        <item name="android:paddingEnd">@dimen/margin_padding_small</item>
+        <item name="android:minHeight">36dp</item>
+        <item name="android:minWidth">120dp</item>
+    </style>
+
+    <style name="CompareButton.Primary" parent="CompareButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/button_primary</item>
+    </style>
+
+    <style name="CompareButton.Secondary" parent="CompareButton">
+        <item name="android:background">@drawable/button_primary_stroke</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
     <style name="checkBoxPrimary">
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
