--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/bar"
         tools:openDrawer="start">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -32,13 +32,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/white"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:layout_constraintBottom_toTopOf="@+id/productCompareView" />
+
+            <cenergy.central.com.pwb_store.view.ProductCompareView
+                android:id="@+id/productCompareView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <cenergy.central.com.pwb_store.view.NetworkStateView
                 android:id="@+id/network_state_View"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
@@ -48,8 +56,6 @@
             android:fitsSystemWindows="true"
             app:itemIconTint="@android:color/white"
             app:itemTextColor="@android:color/white">
-            <!--app:menu="@menu/drawer">-->
-            <!--app:headerLayout="@layout/drawer_header"-->
 
             <LinearLayout
                 android:layout_width="match_parent"
