--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -22,7 +22,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/productCompareView"
         app:layout_constraintTop_toBottomOf="@+id/actionbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
