--- a/app/src/main/res/layout/widget_product_compare_view.xml
+++ b/app/src/main/res/layout/widget_product_compare_view.xml
@@ -2,16 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/compareLayout"
     android:layout_width="match_parent"
     android:layout_height="@dimen/product_compare_bar_size"
-    android:padding="@dimen/margin_padding_small">
+    android:background="@color/white"
+    android:minHeight="@dimen/product_compare_bar_size">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/compareText"
         style="@style/TextAppearance.MaterialComponents.Body1"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_padding_normal"
+        android:layout_marginTop="@dimen/margin_padding_normal"
         android:layout_marginEnd="@dimen/margin_padding_small"
+        android:layout_marginBottom="@dimen/margin_padding_normal"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/compareButton"
@@ -26,7 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_padding_small"
         android:text="@string/product_compare"
+        android:layout_marginTop="@dimen/margin_padding_normal"
         android:visibility="visible"
+        android:layout_marginBottom="@dimen/margin_padding_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/resetButton"
         app:layout_constraintStart_toEndOf="@+id/compareText"
@@ -37,6 +44,7 @@
         style="@style/CompareButton.Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_padding_normal"
         android:text="@string/compare_clear_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
