--- a/app/src/main/res/layout/fragment_payment_select_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_select_methods.xml
@@ -1,32 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
-
-    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/title_select_methods"
-        style="@style/textHeader"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/select_payment_types"
-        app:layout_constraintBottom_toTopOf="@id/recycler_select_methods"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_select_methods"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingBottom="@dimen/app_bottom_bar_size"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_select_methods"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/list_item_pay_by_other"/>
+        android:paddingBottom="@dimen/app_bottom_bar_size"
+        tools:listitem="@layout/list_item_pay_by_other" />
 </androidx.constraintlayout.widget.ConstraintLayout>
