--- a/app/src/main/res/layout/list_item_pay_by_credite_card.xml
+++ b/app/src/main/res/layout/list_item_pay_by_credite_card.xml
@@ -8,8 +8,8 @@
     android:paddingTop="16dp"
     android:paddingEnd="16dp">
 
-    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tv_title"
+    <RadioButton
+        android:id="@+id/radioPayment"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tv_description"
-        app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Pay by Installment" />
@@ -34,9 +34,9 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/ic_visa"
-        app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/radioPayment" />
 
     <ImageView
         android:id="@+id/ic_visa"
@@ -60,20 +60,6 @@
         android:src="@drawable/ic_master_card"
         app:layout_constraintStart_toEndOf="@id/ic_visa"
         app:layout_constraintTop_toBottomOf="@+id/tv_description" />
-
-    <Button
-        android:id="@+id/choose_payment_method"
-        style="@style/Button.Primary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:padding="16dp"
-        android:text="@string/choose"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/option_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/option_line"
