--- a/app/src/main/res/layout/list_item_pay_by_other.xml
+++ b/app/src/main/res/layout/list_item_pay_by_other.xml
@@ -4,43 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="108dp"
     android:paddingStart="16dp"
     android:paddingTop="16dp"
     android:paddingEnd="16dp">
 
-    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tv_title"
+    <RadioButton
+        android:id="@+id/radioPayment"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_padding_small"
         android:layout_marginEnd="@dimen/margin_padding_small"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/choose_payment_method"
-        tools:text="Full Payment" />
-
-    <Button
-        android:id="@+id/choose_payment_method"
-        style="@style/Button.Primary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_padding_small"
-        android:text="@string/choose"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/option_line"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Full Payment" />
 
     <View
         android:id="@+id/option_line"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/margin_padding_normal"
-        app:layout_constraintTop_toBottomOf="@+id/choose_payment_method"
+        app:layout_constraintTop_toBottomOf="@+id/radioPayment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
