--- a/app/src/main/res/layout/list_item_pay_common.xml
+++ b/app/src/main/res/layout/list_item_pay_common.xml
@@ -8,8 +8,8 @@
     android:paddingTop="16dp"
     android:paddingEnd="16dp">
 
-    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tv_title"
+    <RadioButton
+        android:id="@+id/radioPayment"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tv_description"
-        app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Full Payment" />
@@ -33,23 +33,9 @@
         android:textColor="@color/graySelect"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/choose_payment_method"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
-
-    <Button
-        android:id="@+id/choose_payment_method"
-        style="@style/Button.Primary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:padding="16dp"
-        android:text="@string/choose"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/option_line"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioPayment" />
 
     <View
         android:id="@+id/option_line"
@@ -57,8 +43,8 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="@color/graySelect"
-        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 </androidx.constraintlayout.widget.ConstraintLayout>
